--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.72.0",
     "vite": "5.1.6",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-handlebars": "^2.0.0",
     "vite-plugin-minify": "^1.5.2"
   },
   "dependencies": {
